--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </article>
     </section>
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="mailto:jonathanandrademb@hotmail.com"> jonathanandrademb@hotmail.com </a>
             </li>
