--- a/AulaJS.html
+++ b/AulaJS.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula JS</title>
-</head>
-<body>
-    
     <script src="main.js"></script>
+
+</head>
+<body onload="load()">
+    <button type="button" onclick="clicou()">Clique aqui</button>
+    <h3 id="agradecimento" onclick="redirecionar()"></h3>
+    <!-- <p id="mousemove" onmouseover="trocar()" onmouseout="voltar()">Passe o mouse aqui</p> -->
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
+
+    <section>
+        <select onchange="funcaoChange(this)">
+            <option value="1">Valor 1</option>
+            <option value="2">Valor 2</option>
+            <option value="3">Valor 3</option>
+            <option value="4">Valor 4</option>
+            <option value="5">Valor 5</option>
+            <option value="6">Valor 6</option>
+        </select>
+    </section>
 </body>
 </html>
