--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Just... cats!</title>
 </head>
 <body>
     <main>
         <h1>Just Cats</h1>
-        <img id="cat" src="" alt="">
-        <button id="chance-cat">chance Cat</button>
+        <img id="cat">
+        </br>
+        <button id="change-cat">chance Cat</button>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
